fix MMS API Documentation
